# QtAudioPlugin

./: .gitmodules  CMakeLists.txt  README.md
example/helloworld/: CMakeLists.txt
example/helloworld_with_VSTGUI/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/: ids.h  plugids.h  version.h
plugin/source/: factory.cpp  plugcontroller.cpp  plugcontroller.h  plugfactory.cpp  plugin_controller.cpp  plugin_controller.h  plugin_processor.cpp  plugin_processor.h  plugin_view.cpp  plugin_view.h  plugprocessor.cpp  plugprocessor.h
qt_audio_plugin/: CMakeLists.txt  qvstapplication.cpp  qvstapplication.h  qvstaudioeffect.cpp  qvstaudioeffect.h  qvstconsole.cpp  qvstconsole.h  qvstcontroller.cpp  qvstcontroller.h  qvsteditorview.cpp  qvsteditorview.h  qvsthostedwidget.cpp  qvsthostedwidget.h  qvstlibentry.cpp  qvstparametercontainer.cpp  qvstparametercontainer.h
qt_audio_plugin/tests/: test_entrypoint.cpp
widgets-gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
